/galaxy/{galaxy}/cosines/{mode} serves the table; openapi
